--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "iview": "^2.9.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-ydui": "^1.2.0",
-    "webpack-server": "^0.1.2"
+    "webpack-server": "^0.1.2",
+    "ydui-district": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
