--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-ydui": "^1.2.0",
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.1",
     "webpack-server": "^0.1.2",
     "ydui-district": "^1.1.0"
   },
