--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "exif-js": "^2.3.0",
     "iview": "^2.9.2",
+    "vant": "^1.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-ydui": "^1.2.0",
@@ -49,6 +51,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "jquery": "^3.3.1",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
     "nightwatch": "^0.9.12",
