--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.2.2",
     "exif-js": "^2.3.0",
     "iview": "^2.9.2",
     "vant": "^1.0.2",
