--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "iview": "^2.9.2",
     "vant": "^1.0.2",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
     "vue-ydui": "^1.2.0",
     "vuex": "^3.0.1",
